--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>ALURAFLIX</header>
 
     <section>
-        <div>
+        <div class="texto-chamada">
             <h1>GTA VI 2ºtrailer</h1>
             <p>#gta6</p>
         </div>
