--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         </div>
     </section>
 
+    <section>
+        <h2> Filmes e series</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=PYB8lNZrepE">
+            <img src="https://img.youtube.com/vi/PYB8lNZrepE/maxresdefault.jpg"/>
+            </a>
+
+        </div>
+    </section>
 </body>
 
 </html>
