--- a/index.html
+++ b/index.html
@@ -28,20 +28,21 @@
             <img src="https://img.youtube.com/vi/PYB8lNZrepE/maxresdefault.jpg"/>
             </a>
 
-            <a href="https://www.youtube.com/watch?v=PYB8lNZrepE">
-            <img src="https://img.youtube.com/vi/PYB8lNZrepE/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=kOZ8bRAO7YQ">
+            <img src="https://img.youtube.com/vi/kOZ8bRAO7YQ/maxresdefault.jpg"/>
+            </a>
+
+            <a href="https://www.youtube.com/watch?v=PD24MkbHQrc">
+            <img src="https://img.youtube.com/vi/PD24MkbHQrc/maxresdefault.jpg"/>
             </a>
 
             <a href="https://www.youtube.com/watch?v=PYB8lNZrepE">
             <img src="https://img.youtube.com/vi/PYB8lNZrepE/maxresdefault.jpg"/>
             </a>
-            
-            <a href="https://www.youtube.com/watch?v=PYB8lNZrepE">
-            <img src="https://img.youtube.com/vi/PYB8lNZrepE/maxresdefault.jpg"/>
+
+            <a href="https://www.youtube.com/watch?v=xlu5jR6QMtk">
+            <img src="https://img.youtube.com/vi/xlu5jR6QMtk/maxresdefault.jpg"/>
             </a>
-
-
-
 
         </div>
     </section>
